# veos-cosim-client

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Config.cmake.in  LICENSE  README.md  b.bat  b.sh  benchmark.cmd  benchmark.sh  build.cmd  build.sh  c.bat  c.sh  clean.cmd  clean.sh  client.cmd  client.sh  compile_flags.txt  justfile  pclient.cmd  pclient.sh  pserver.cmd  pserver.sh  server.cmd  server.sh  t.bat  t.sh  test.cmd  test.sh
.github/: copilot-instructions.md
benchmark/: BenchmarkBusBuffer.cpp  BenchmarkEvent.cpp  BenchmarkHelper.cpp  BenchmarkHelper.h  BenchmarkIoBuffer.cpp  BenchmarkRemoteChannel.cpp  BenchmarkSocket.cpp  CMakeLists.txt  Program.cpp
benchmark/Communication/: BenchmarkChannel.cpp
benchmark/OsAbstraction/: BenchmarkNamedEvent.cpp  BenchmarkSocket.cpp
doc/: documentation.html  (+1 more)
shared/: BackgroundService.cpp  BackgroundService.h  CMakeLists.txt  ClientServerTestHelper.cpp  ClientServerTestHelper.h  CoSimServerWrapper.cpp  CoSimServerWrapper.h  Generator.cpp  Generator.h  Helper.cpp  Helper.h  LogHelper.cpp  LogHelper.h  OsAbstractionTestHelper.cpp  OsAbstractionTestHelper.h  PerformanceTestHelper.h
src/: BusBuffer.cpp  BusBuffer.h  BusBuffer.hpp  BusExchange.cpp  BusExchange.hpp  BusExchangeCommon.hpp  BusExchangeFor.hpp  BusExchangeLocalWin.hpp  BusExchangeLocked.hpp  BusExchangeRemote.hpp  BusExchangeSpecific.hpp  CMakeLists.txt  CoSimClient.cpp  CoSimClient.h  CoSimClient.hpp  CoSimServer.cpp  CoSimServer.h  CoSimServer.hpp  CoSimTypes.cpp  CoSimTypes.h  CoSimTypes.hpp  Communication.cpp  Communication.h  DsVeosCoSim.cpp  Event.cpp  Event.h  IoBuffer.cpp  IoBuffer.h  IoBuffer.hpp  Logger.cpp  Logger.h  PortMapper.cpp  PortMapper.h  PortMapper.hpp  Protocol.cpp  Protocol.h  Protocol.hpp  SharedMemory.cpp  SharedMemory.h  SignalExchange.cpp  (+7 more)
src/Communication/: Channel.h  Channel.hpp  LocalChannel.cpp  LocalChannel.h  SocketChannel.cpp  SocketChannel.h
src/Helpers/: CoSimHelper.cpp  CoSimHelper.h  Environment.cpp  Environment.h  Environment.hpp  Error.hpp  Format.hpp  Logger.cpp  Logger.h  Logger.hpp  ProtocolLogger.cpp  ProtocolLogger.h  ProtocolLogger.hpp  Result.h  Result.hpp  RingBuffer.h  RingBuffer.hpp  RingBufferView.hpp  ShmRingBuffer.h  ShmRingBuffer.hpp
src/OsAbstraction/: Event.h  Event.hpp  Handle.cpp  Handle.h  NamedEvent.cpp  NamedEvent.h  NamedMutex.cpp  NamedMutex.h  OsUtilities.cpp  OsUtilities.h  OsUtilities.hpp  SharedMemory.cpp  SharedMemory.h  Socket.cpp  Socket.h  Socket.hpp
test/: CMakeLists.txt  CoSimServerWrapper.cpp  CoSimServerWrapper.h  Generator.cpp  Generator.h  Program.cpp  TestBusBuffer.cpp  TestCoSim.cpp  TestCommunication.cpp  TestEvent.cpp  TestHelper.cpp  TestHelper.h  TestIoBuffer.cpp  TestPortMapper.cpp  TestProtocol.cpp  TestSharedMemory.cpp  TestSocket.cpp
test/Communication/: TestLocalChannel.cpp  TestTcpChannel.cpp  TestUdsChannel.cpp
test/Helpers/: TestHelper.cpp  TestHelper.h
test/OsAbstraction/: TestNamedEvent.cpp  TestNamedMutex.cpp  TestSharedMemory.cpp  TestTcpSocket.cpp  TestUdsSocket.cpp
tests/PerformanceTestClient/: CMakeLists.txt  ClientCoSimCallback.cpp  ClientCoSimCallbackBased.cpp  ClientCoSimPolling.cpp  ClientCoSimPollingBased.cpp  ClientEvents.cpp  ClientLocal.cpp  ClientLocalChannel.cpp  ClientLocalCommunication.cpp  ClientLocalSocket.cpp  ClientPipe.cpp  ClientRemoteChannel.cpp  ClientRemoteCommunication.cpp  ClientShmPipe.cpp  ClientTcp.cpp  ClientTcpSocket.cpp  ClientUdp.cpp  ClientUdpSocket.cpp  ClientUds.cpp  PerformanceTestClient.cpp  PerformanceTestClient.h  PerformanceTestClient.hpp  Program.cpp  RunPerformanceTest.cpp  RunPerformanceTest.h
tests/PerformanceTestServer/: CMakeLists.txt  PerformanceTestServer.h  PerformanceTestServer.hpp  Program.cpp  ServerCoSim.cpp  ServerEvents.cpp  ServerLocal.cpp  ServerLocalChannel.cpp  ServerLocalCommunication.cpp  ServerLocalSocket.cpp  ServerPipe.cpp  ServerRemoteChannel.cpp  ServerRemoteCommunication.cpp  ServerShmPipe.cpp  ServerTcp.cpp  ServerTcpSocket.cpp  ServerUdp.cpp  ServerUdpSocket.cpp  ServerUds.cpp
tests/TestClient/: CMakeLists.txt  Program.cpp
tests/TestServer/: CMakeLists.txt  Program.cpp
tests/benchmark/: BenchmarkBusBuffer.cpp  BenchmarkBusExchange.cpp  BenchmarkCoSim.cpp  BenchmarkIoBuffer.cpp  BenchmarkProtocol.cpp  BenchmarkSignalExchange.cpp  CMakeLists.txt  Program.cpp
tests/benchmark/Communication/: BenchmarkChannel.cpp
tests/benchmark/OsAbstraction/: BenchmarkNamedEvent.cpp  BenchmarkShmPipe.cpp  BenchmarkSocket.cpp
tests/shared/: CMakeLists.txt  Generator.cpp  Generator.h  Helper.cpp  Helper.h  Helper.hpp  LogHelper.cpp  LogHelper.h  OsAbstractionTestHelper.cpp  OsAbstractionTestHelper.h  OsAbstractionTestHelper.hpp  PerformanceTestHelper.h  PerformanceTestHelper.hpp
tests/unit/: CMakeLists.txt  Program.cpp  TestBusBuffer.cpp  TestBusExchange.cpp  TestCoSim.cpp  TestCoSimClient.cpp  TestDsVeosCoSim.cpp  TestIoBuffer.cpp  TestPortMapper.cpp  TestProtocol.cpp  TestSignalExchange.cpp  TestTypes.cpp
tests/unit/Communication/: TestLocalChannel.cpp  TestLocalChannelUnix.cpp  TestLocalChannelWindows.cpp  TestTcpChannel.cpp  TestUdsChannel.cpp
tests/unit/Helpers/: TestHelper.cpp  TestHelper.h  TestHelper.hpp
tests/unit/OsAbstraction/: TestLocalSocket.cpp  TestNamedEvent.cpp  TestNamedLock.cpp  TestNamedMutex.cpp  TestSharedMemory.cpp  TestShmPipe.cpp  TestTcpSocket.cpp  TestUdsSocket.cpp
utilities/PerformanceTestClient/: CMakeLists.txt  ClientAsioBlocking.cpp  ClientCoSimCallbackBased.cpp  ClientCoSimPollingBased.cpp  ClientEvents.cpp  ClientLocalCommunication.cpp  ClientPipe.cpp  ClientRemoteCommunication.cpp  ClientTcp.cpp  ClientUdp.cpp  ClientUds.cpp  Program.cpp  RunPerformanceTest.cpp
utilities/PerformanceTestServer/: CMakeLists.txt  Program.cpp  ServerAsioBlocking.cpp  ServerCoSim.cpp  ServerEvents.cpp  ServerLocalCommunication.cpp  ServerPipe.cpp  ServerRemoteCommunication.cpp  ServerTcp.cpp  ServerUdp.cpp  ServerUds.cpp
utilities/TestServer/: CMakeLists.txt  Program.cpp
(+192 files in other folders)
